feat: simplify file reading with UTF-8 encoding