@@ -1,10 +1,11 @@
 package util;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.*;
 
 public class FileUtils {
     public static String readFile(String path) throws IOException {
-        return new String(Files.readAllBytes(Paths.get(path)));
+        return Files.readString(Paths.get(path), StandardCharsets.UTF_8);
     }
 }
